# HVSockFileShare

./: .gitignore  CMakeLists.txt  makefile
Includes/ClientLib/: stdafx.h
Includes/Common/: Helpers.h  Ids.h  LinuxCompat.h  SafeSocket.h
Includes/Common/messages/: Echo.h  Handshake.h  Join.h  MessageTypes.h
Includes/Transport/: Connect.h  HVListener.h  LinuxCompat.h  SafeSocket.h
src/: HVSockFileShare.sln
src/Client/: Client.cpp  Client.vcxproj  Client.vcxproj.filters
src/ClientLib/: ClientLib.vcxproj  ClientLib.vcxproj.filters  Connect.cpp  Connect.h
src/Common/: Buffer.cpp  Common.vcxproj  Common.vcxproj.filters  Ids.h  SafeSocket.cpp  SafeSocket.h
src/Common/messages/: Header.h  MessageTypes.h
src/Includes/ClientLib/: Connect.h
src/Includes/Common/: Buffer.h  LinuxCompat.h  SafeSocket.h
src/LinuxClient/: main.cpp
src/Srv/: ReadMe.txt  Srv.cpp  Srv.vcxproj  Srv.vcxproj.filters  stdafx.cpp
src/SrvLib/: FileServer.cpp  FileServer.h  HVListener.cpp  HVListener.h  ReadMe.txt  Session.cpp  Session.h  SessionPool.cpp  SessionPool.h  SrvLib.vcxproj  SrvLib.vcxproj.filters
src/Transport/: Connect_Linux.cpp  Connect_Windows.cpp  HVListener.cpp  HVListener.cpp~RFc7f75b4.TMP  ReadMe.txt  SafeSocket_Linux.cpp  SafeSocket_Windows.cpp  Transport.vcxproj  Transport.vcxproj.filters
